--- a/Rapidlaunch/Views/Addresses/Delete.cshtml
+++ b/Rapidlaunch/Views/Addresses/Delete.cshtml
@@ -10,7 +10,7 @@
 <div>
     <h4>Address</h4>
     <hr />
-    <dl class="row">
+    <dl class="row justify-content-md-center"> <!-- Centering the Row -->
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.addressLine1)
         </dt>
