--- a/Rapidlaunch/Views/LaunchHomePage/Index.cshtml
+++ b/Rapidlaunch/Views/LaunchHomePage/Index.cshtml
@@ -15,7 +15,7 @@
         <div class="card">
             <p>  </p>
             <div style="width:100%; text-align:center; border-color:transparent;">
-                <a class="card-img-top" asp-area="" asp-controller="Launches" asp-action="Index"> <img src="~/Assets/S.png" , height="200" width="200" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="Launches" asp-action="Index"> <img src="~/Assets/l.png" , height="200" width="200" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="Launches" asp-action="Index"> Launch </a></h5>
@@ -83,7 +83,7 @@
         <div class="card">
             <p>  </p>
             <div style="width:100%; text-align:center">
-                <a class="card-img-top" asp-area="" asp-controller="LaunchStaffSchedules" asp-action="LaunchStaffSchedules"> <img src="~/Assets/SA.png" , height="200" width="200" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="LaunchStaffSchedules" asp-action="LaunchStaffSchedules"> <img src="~/Assets/S.png" , height="200" width="200" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="LaunchStaffSchedules" asp-action="Index"> Schedules </a></h5>
@@ -98,7 +98,7 @@
             <p>  </p>
             <div style="width:100%; text-align:center">
                 <p> </p>
-                <a class="card-img-top" asp-area="" asp-controller="PadStatus" asp-action="Index"> <img src="~/Assets/SS.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="PadStatus" asp-action="Index"> <img src="~/Assets/PS.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="PadStatus" asp-action="Index">Pad Status </a></h5>
@@ -113,7 +113,7 @@
             <p>  </p>
             <div style="width:100%; text-align:center">
                 <p> </p>
-                <a class="card-img-top" asp-area="" asp-controller="Rockets" asp-action="Index"> <img src="~/Assets/SS.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="Rockets" asp-action="Index"> <img src="~/Assets/R.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="Rockets" asp-action="Index">Rockets </a></h5>
@@ -128,7 +128,7 @@
             <p>  </p>
             <div style="width:100%; text-align:center">
                 <p> </p>
-                <a class="card-img-top" asp-area="" asp-controller="RocketTypes" asp-action="Index"> <img src="~/Assets/SS.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="RocketTypes" asp-action="Index"> <img src="~/Assets/RT.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="RocketTypes" asp-action="Index">Rocket Types </a></h5>
@@ -145,7 +145,7 @@ else
 {
     <div class="row">
         <div class="col-md-4">
-            <h2>You are not authorised to view this content - <br />Please log in.</h2>
+            <h1>You are not authorised to view this content - <br />Please log in.</h1>
             <br /><a class="btn btn-danger" asp-area="identity" asp-page="/Account/Login">Login</a>
         </div>
     </div>
