--- a/Rapidlaunch/Views/MiscellaneousHomePage/Index.cshtml
+++ b/Rapidlaunch/Views/MiscellaneousHomePage/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="card">
             <p>  </p>
             <div style="width:100%; text-align:center; border-color:transparent;">
-                <a class="card-img-top" asp-area="" asp-controller="ITAccounts" asp-action="Index"> <img src="~/Assets/S.png" , height="200" width="200" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="ITAccounts" asp-action="Index"> <img src="~/Assets/IA.png" , height="200" width="200" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="ITAccounts" asp-action="Index"> IT Accounts </a></h5>
@@ -81,7 +81,7 @@
         <div class="card">
             <p>  </p>
             <div style="width:100%; text-align:center">
-                <a class="card-img-top" asp-area="" asp-controller="ITAccountTypes" asp-action="IT Account Types"> <img src="~/Assets/SA.png" , height="200" width="200" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="ITAccountTypes" asp-action="IT Account Types"> <img src="~/Assets/IAT.png" , height="200" width="200" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="ITAccountTypes" asp-action="Index">IT Account Types</a></h5>
@@ -96,7 +96,7 @@
             <p>  </p>
             <div style="width:100%; text-align:center">
                 <p> </p>
-                <a class="card-img-top" asp-area="" asp-controller="Addresses" asp-action="Index"> <img src="~/Assets/SS.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="Addresses" asp-action="Index"> <img src="~/Assets/RA.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="Addresses" asp-action="Index"> Recognised Addresses </a></h5>
@@ -111,7 +111,7 @@
             <p>  </p>
             <div style="width:100%; text-align:center">
                 <p> </p>
-                <a class="card-img-top" asp-area="" asp-controller="Countries" asp-action="Index"> <img src="~/Assets/SS.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="Countries" asp-action="Index"> <img src="~/Assets/RC.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="Countries" asp-action="Index"> Recognised Countries </a></h5>
@@ -126,7 +126,7 @@
             <p>  </p>
             <div style="width:100%; text-align:center">
                 <p> </p>
-                <a class="card-img-top" asp-area="" asp-controller="Roles" asp-action="Index"> <img src="~/Assets/SS.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="Roles" asp-action="Index"> <img src="~/Assets/R.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="Roles" asp-action="Index"> Roles </a></h5>
