--- a/Rapidlaunch/Views/PadStatus/Details.cshtml
+++ b/Rapidlaunch/Views/PadStatus/Details.cshtml
@@ -9,11 +9,12 @@
 <div>
     <h4>PadStatus</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <dl class="row" style="text-align:center">
+        <!--Align more Central  -->
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.padStatus)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.padStatus)
         </dd>
     </dl>
