--- a/Rapidlaunch/Views/ProviderHomePage/Index.cshtml
+++ b/Rapidlaunch/Views/ProviderHomePage/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="card">
             <p>  </p>
             <div style="width:100%; text-align:center; border-color:transparent;">
-                <a class="card-img-top" asp-area="" asp-controller="SafetyRatings" asp-action="Index"> <img src="~/Assets/S.png" , height="200" width="200" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="SafetyRatings" asp-action="Index"> <img src="~/Assets/SR.png" , height="200" width="200" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="SafetyRatings" asp-action="Index"> Providers </a></h5>
@@ -81,7 +81,7 @@
         <div class="card">
             <p>  </p>
             <div style="width:100%; text-align:center">
-                <a class="card-img-top" asp-area="" asp-controller="ProviderContacts" asp-action="Staff Safety Records"> <img src="~/Assets/SA.png" , height="200" width="200" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="ProviderContacts" asp-action="Staff Safety Records"> <img src="~/Assets/SSR.png" , height="200" width="200" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="ProviderContacts" asp-action="Index"> Provider Contacts </a></h5>
@@ -96,7 +96,7 @@
             <p>  </p>
             <div style="width:100%; text-align:center">
                 <p> </p>
-                <a class="card-img-top" asp-area="" asp-controller="ProviderAddresses" asp-action="Index"> <img src="~/Assets/SS.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="ProviderAddresses" asp-action="Index"> <img src="~/Assets/PA.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="ProviderAddresses" asp-action="Index"> Provider Addresses</a></h5>
