--- a/Rapidlaunch/Views/Providers/Index.cshtml
+++ b/Rapidlaunch/Views/Providers/Index.cshtml
@@ -7,9 +7,10 @@
 @{
     ViewData["Title"] = "Index";
 }
+<!-- checks if user is signed in -->
 @if (SignInManager.IsSignedIn(User))
 {
-    <h1>Index</h1>
+    <h1>Providers </h1>
 
     <p>
         <a asp-action="Create">Create New</a>
@@ -58,7 +59,7 @@ else
 {
     <div class="row">
         <div class="col-md-4">
-            <h2>You are not authorised to view this content - <br />Please log in.</h2>
+            <h1>You are not authorised to view this content - <br />Please log in.</h1>
             <br /><a class="btn btn-danger" asp-area="identity" asp-page="/Account/Login">Login</a>
         </div>
     </div>
