--- a/Rapidlaunch/Views/SafetyHomePage/Index.cshtml
+++ b/Rapidlaunch/Views/SafetyHomePage/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="card">
             <p>  </p>
             <div style="width:100%; text-align:center; border-color:transparent;">
-                <a class="card-img-top" asp-area="" asp-controller="SafetyRatings" asp-action="Index"> <img src="~/Assets/S.png" , height="200" width="200" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="SafetyRatings" asp-action="Index"> <img src="~/Assets/SR.png" , height="200" width="200" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="SafetyRatings" asp-action="Index"> Safety Ratings </a></h5>
@@ -82,7 +82,7 @@
         <div class="card">
             <p>  </p>
             <div style="width:100%; text-align:center">
-                <a class="card-img-top" asp-area="" asp-controller="StaffSafetyRecords" asp-action="Staff Safety Records"> <img src="~/Assets/SA.png" , height="200" width="200" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="StaffSafetyRecords" asp-action="Staff Safety Records"> <img src="~/Assets/SSR.png" , height="200" width="200" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="StaffSafetyRecords" asp-action="Index"> Staff Safety Records </a></h5>
@@ -97,7 +97,7 @@
             <p>  </p>
             <div style="width:100%; text-align:center">
                 <p> </p>
-                <a class="card-img-top" asp-area="" asp-controller="RocketTypes" asp-action="Index"> <img src="~/Assets/SS.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="RocketTypes" asp-action="Index"> <img src="~/Assets/RT.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><a asp-area="" asp-controller="RocketTypes" asp-action="Index"> Rocket Types </a></h5>
