--- a/Rapidlaunch/Views/Addresses/Index.cshtml
+++ b/Rapidlaunch/Views/Addresses/Index.cshtml
@@ -5,13 +5,16 @@
 @model IEnumerable<Rapidlaunch.Models.Address>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Address";
 }
 <h1>Address</h1>
 <!-- Checks user is signed me in -->
 @if (SignInManager.IsSignedIn(User))
 {
-    <table class="table">
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+    <table class="table ">
         <!-- Creates a table fills out data -->
         <thead>
             <tr>
@@ -71,10 +74,10 @@
     </table>
 }
 else
-{ <!-- output if the user isnt signed in-->
+{
     <div class="row">
         <div class="col-md-4">
-            <h2>You are not authorised to view this content - <br />Please log in.</h2>
+            <h1>You are not authorised to view this content - <br />Please log in.</h1>
             <br /><a class="btn btn-danger" asp-area="identity" asp-page="/Account/Login">Login</a>
         </div>
     </div>
