--- a/Rapidlaunch/Views/Countries/Create.cshtml
+++ b/Rapidlaunch/Views/Countries/Create.cshtml
@@ -6,9 +6,10 @@
 
 <h1>Create</h1>
 
-<h4>Country</h4>
+
 <hr />
-<div class="row">
+<div class="row justify-content-md-center">
+    <h4>Country</h4>
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
