--- a/Rapidlaunch/Views/Countries/Delete.cshtml
+++ b/Rapidlaunch/Views/Countries/Delete.cshtml
@@ -7,7 +7,7 @@
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
-<div>
+<div id="testicle">
     <h4>Country</h4>
     <hr />
     <dl class="row">
