--- a/Rapidlaunch/Views/ITAccountTypes/Details.cshtml
+++ b/Rapidlaunch/Views/ITAccountTypes/Details.cshtml
@@ -9,11 +9,11 @@
 <div>
     <h4>ITAccountType</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <dl class="row" style="text-align:center">        <!--Align more Central  -->
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.authorisationLevel)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.authorisationLevel)
         </dd>
     </dl>
