--- a/Rapidlaunch/Views/ITAccounts/Delete.cshtml
+++ b/Rapidlaunch/Views/ITAccounts/Delete.cshtml
@@ -7,7 +7,7 @@
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
-<div>
+<div class="Deletecenter justify-content-md-center">
     <h4>ITAccount</h4>
     <hr />
     <dl class="row">
