--- a/Rapidlaunch/Views/ITAccounts/Details.cshtml
+++ b/Rapidlaunch/Views/ITAccounts/Details.cshtml
@@ -9,7 +9,7 @@
 <div>
     <h4>ITAccount</h4>
     <hr />
-    <dl class="row">
+    <dl class="row" style="text-align:center"> <!--Align more Central  -->
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.itaccountTypeIdentID)
         </dt>
