--- a/Rapidlaunch/Views/LaunchStaffSchedules/Index.cshtml
+++ b/Rapidlaunch/Views/LaunchStaffSchedules/Index.cshtml
@@ -5,10 +5,10 @@
 
 @{
     ViewData["Title"] = "Index";
-}
+}<!-- checks if user is signed in -->
 @if (SignInManager.IsSignedIn(User))
 {
-    <h1>Index</h1>
+    <h1>Launch Schedule</h1>
 
     <p>
         <a asp-action="Create">Create New</a>
@@ -53,11 +53,12 @@
         </tbody>
     </table>
 }
-else{
+else
+{
     <div class="row">
         <div class="col-md-4">
-            <h2>You are not authorised to view this content - <br />Please log in.</h2>
-                <br /><a class="btn btn-danger" asp-area="identity" asp-page="/Account/Login">Login</a>
+            <h1>You are not authorised to view this content - <br />Please log in.</h1>
+            <br /><a class="btn btn-danger" asp-area="identity" asp-page="/Account/Login">Login</a>
         </div>
-     </div>
+    </div>
 }
