--- a/Rapidlaunch/Views/Shared/_Layout.cshtml
+++ b/Rapidlaunch/Views/Shared/_Layout.cshtml
@@ -19,12 +19,13 @@
 </head>
 <body>
     <header>
-        <nav class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm navbar border-light box-shadows ">
+        <nav class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm navbar border-dark box-shadows">
             <div class="container-fluid ">
                 <a class="navbar-brand" asp-area="" asp-controller="HomePage" asp-action="Index"> <img src="~/Assets/RapidLaunchTester.PNG" , height="60" width="220 " /> </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon">
+                    </span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
