--- a/Rapidlaunch/Views/StaffAddresses/Index.cshtml
+++ b/Rapidlaunch/Views/StaffAddresses/Index.cshtml
@@ -6,9 +6,10 @@
 @{
     ViewData["Title"] = "Index";
 }
+<!-- checks if user is signed in -->
 @if (SignInManager.IsSignedIn(User))
 {
-    <h1>Index</h1>
+    <h1>Staff Address</h1>
 
     <p>
         <a asp-action="Create">Create New</a>
@@ -36,7 +37,7 @@
                         @Html.DisplayFor(modelItem => item.staff.staffID)
                     </td>
                     <td>
-                        
+
                         @Html.ActionLink("Details", "Details", new { id = item.AddressID, id2 = item.staffID }) |
                         @Html.ActionLink("Delete", "Delete", new { id = item.AddressID, id2 = item.staffID })
                     </td>
@@ -49,8 +50,8 @@ else
 {
     <div class="row">
         <div class="col-md-4">
-            <h2>You are not authorised to view this content - <br />Please log in.</h2>
+            <h1>You are not authorised to view this content - <br />Please log in.</h1>
             <br /><a class="btn btn-danger" asp-area="identity" asp-page="/Account/Login">Login</a>
         </div>
-    </div>
+    </div><!-- checks if user is signed in - giving a sign in alternative -->
 }
