--- a/Rapidlaunch/Views/StaffSafetyRecords/Details.cshtml
+++ b/Rapidlaunch/Views/StaffSafetyRecords/Details.cshtml
@@ -9,17 +9,18 @@
 <div>
     <h4>StaffSafetyRecord</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <dl class="row" style="text-align:center">
+        <!--Align more Central  -->
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Staff)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Staff.staffID)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.SafetyRating)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SafetyRating.safetyRatingID)
         </dd>
     </dl>
